--- a/.github/workflows/file-release.yml
+++ b/.github/workflows/file-release.yml
@@ -1,19 +1,17 @@
 name: Download and release
- 
-on: 
- workflow_dispatch:
 
- 
+on:
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2  
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: ./downloads/*
-        tag_name: 'ffmpeg'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-        
+      - uses: actions/checkout@v2
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./downloads/*
+          tag_name: "ffmpeg"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
